--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-firebase-hooks": "^5.1.1",
     "react-native": "0.73.4",
     "react-native-web": "~0.19.6",
-    "expo-image-picker": "~14.7.1"
+    "expo-image-picker": "~14.7.1",
+    "react-native-maps": "1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
